Relicense under the two-term BSD license
Motivation and discussion:

http://groups.google.com/group/reinteract/browse_thread/thread/761a07b9f41d2293

Add a short copyright and license notice to all source files.

--- a/README
+++ b/README
@@ -10,8 +10,9 @@ See:
 
 For more information.
 
-Reinteract is licensed under the terms of the GNU General Public License version 2 
-or later and Copyright 2007, Owen Taylor and Red Hat, Inc.
+Copyright 2007, 2008 Owen Taylor, Red Hat, Inc., and others
+Reinteract is licensed under the simplified BSD license. See the file COPYING
+for full details.
 
 Running
 =======
