--- a/tools/build_bundle/README
+++ b/tools/build_bundle/README
@@ -34,7 +34,7 @@ or to just build an app bundle and not a dmg.
      export CC="gcc -arch i386 -arch ppc"
      export CFLAGS="-O2"
      export CPP="gcc -E"
-     ./autogen.sh
+     ./autogen.sh --enable-python-thunks
      make
 
    FIXME: To get make to pass, you'll need to delete libJPEG.dylib,
