--- a/tools/build_bundle/README
+++ b/tools/build_bundle/README
@@ -27,28 +27,10 @@ or to just build an app bundle and not a dmg.
      JHB_VARIANT=release-i386 tools/build_deps_osx/build.sh
      JHB_VARIANT=release-ppc tools/build_deps_osx/build.sh
 
- * Build a universal binary of ReinteractWrapper
+ * Now build a universal binary of ReinteractWrapper and create
+   the .dmg from it and the dependencies
 
-     JHB=reinteract JHB_VARIANT=release-i386 jhbuild shell
-     export OBJC="gcc -arch i386 -arch ppc"
-     export CC="gcc -arch i386 -arch ppc"
-     export CFLAGS="-O2"
-     export CPP="gcc -E"
-     ./autogen.sh --enable-python-thunks
-     make
-
-   FIXME: To get make to pass, you'll need to move libjpeg.dylib,
-     libpng.dylib, libtiff.dylib from the release-i386 lib directory.
-     These names cause the system frameworks to try and link against
-     the single-arch versions of these libraries instead of of the
-     system versions. If you need to rebuild GTK+ subsequently,
-     you'll have to move these files back or force libjpeg and
-     libtiff to be rebuilt. The real fix is probably to get GTK+
-     to use the system libraries.
-
- * Now build the .dmg
-
-     python tools/build_bundle/build_bundle.py --add-arch=/opt/reinteract/release-ppc/install
+     tools/build_bundle/build_bundle.sh
 
    That will write a file Reinteract-<x.y.z>.dmg into the current
    directory.  It will also write a file Reinteract-<x.y.z>.dmg.manifest,
