Allow building python-2.6 installers on Windows
build.msi.py:
* Include -python2.5 or -python2.6 as part of the installer name
* Include the prefix when generating the product_guid so the two
  installers properly show up as different.
* Allow upgrading a version to itself so that the -python2.5 and
  -python2.6 installers mutually upgrade.
* Compile the wrapper script with Visual C++ for Python-2.6;
  fixing C runtime version problems when using mingw was very
  hard if not impossible. (AFACIT, the problem that Python-2.6 and
  the modules are all Visual C++ compiled against version 9.0 of
  the C runtime; if the wrapper isn't the same some modules
  have problems. Though those modules may actually be buggy
  themselves and missing an embedded manifest.)

--- a/tools/build_msi/README
+++ b/tools/build_msi/README
@@ -18,18 +18,21 @@ To make this work, you'll need:
 
    http://wix.sourceforge.net/
 
-* MinGW installed and added to your PATH. (This is used to compile the
-  Reinteract.exe wrapper script.) Get it from:
+* To build against Python-2.5, MinGW installed and added to your PATH.
+  (This is used to compile the Reinteract.exe wrapper script.) Get it from:
 
    http://www.mingw.org/
+
+* To build against Python-2.6, Visual Studio 2008 or 
+  Visual C++ 20008 Express Edition (a free download) installed.
   
 Then simply run 'python build_msi.py' from this directory, and:
   
-  Reinteract-<version>.msi
+  Reinteract-<version>-python2.N.msi
   
 file will be generated. The file
 
-  Reinteract-<version>.msi.manifest
+  Reinteract-<version>-python2.N.msi.manifest
 
 is a listing of all the files in the installer. This is meant for comparing
 with the previous version to make sure that files haven't gone missing.
