Update copyright years
Update files that have been changed in 2009 prior to release.

--- a/README
+++ b/README
@@ -10,7 +10,7 @@ See:
 
 For more information.
 
-Copyright 2007, 2008 Owen Taylor, Red Hat, Inc., and others
+Copyright 2007-2009 Owen Taylor, Red Hat, Inc., and others
 Reinteract is licensed under the simplified BSD license. See the file COPYING
 for full details.
 
